Tree methods code along

--- a/05_sparkTreeMethods.ipynb
+++ b/05_sparkTreeMethods.ipynb
@@ -349,9 +349,567 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ePJqGFZMegOz",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Code Along"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "C9Phzv-SaIXT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "spark = SparkSession.builder.appName('tree').getOrCreate()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GuQ-n-J2esEV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data = spark.read.csv(\"College.csv\",inferSchema=True,header=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MaXH2aPye5y0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 405
+        },
+        "outputId": "d829b2de-d17b-4fab-ab6d-ea362cec922c"
+      },
+      "source": [
+        "data.printSchema()"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "root\n",
+            " |-- School: string (nullable = true)\n",
+            " |-- Private: string (nullable = true)\n",
+            " |-- Apps: integer (nullable = true)\n",
+            " |-- Accept: integer (nullable = true)\n",
+            " |-- Enroll: integer (nullable = true)\n",
+            " |-- Top10perc: integer (nullable = true)\n",
+            " |-- Top25perc: integer (nullable = true)\n",
+            " |-- F_Undergrad: integer (nullable = true)\n",
+            " |-- P_Undergrad: integer (nullable = true)\n",
+            " |-- Outstate: integer (nullable = true)\n",
+            " |-- Room_Board: integer (nullable = true)\n",
+            " |-- Books: integer (nullable = true)\n",
+            " |-- Personal: integer (nullable = true)\n",
+            " |-- PhD: integer (nullable = true)\n",
+            " |-- Terminal: integer (nullable = true)\n",
+            " |-- S_F_Ratio: double (nullable = true)\n",
+            " |-- perc_alumni: integer (nullable = true)\n",
+            " |-- Expend: integer (nullable = true)\n",
+            " |-- Grad_Rate: integer (nullable = true)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8R9uGRwce8ht",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import VectorAssembler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_HrYnyUcfOEa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 368
+        },
+        "outputId": "97aadbb9-1e4e-4e85-d75e-04b545e41be1"
+      },
+      "source": [
+        "data.columns"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['School',\n",
+              " 'Private',\n",
+              " 'Apps',\n",
+              " 'Accept',\n",
+              " 'Enroll',\n",
+              " 'Top10perc',\n",
+              " 'Top25perc',\n",
+              " 'F_Undergrad',\n",
+              " 'P_Undergrad',\n",
+              " 'Outstate',\n",
+              " 'Room_Board',\n",
+              " 'Books',\n",
+              " 'Personal',\n",
+              " 'PhD',\n",
+              " 'Terminal',\n",
+              " 'S_F_Ratio',\n",
+              " 'perc_alumni',\n",
+              " 'Expend',\n",
+              " 'Grad_Rate']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U3nZxaT5fPmv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "assembler = VectorAssembler(inputCols=['Apps',\n",
+        "                                       'Accept',\n",
+        "                                       'Enroll',\n",
+        "                                       'Top10perc',\n",
+        "                                       'Top25perc',\n",
+        "                                       'F_Undergrad',\n",
+        "                                       'P_Undergrad',\n",
+        "                                       'Outstate',\n",
+        "                                       'Room_Board',\n",
+        "                                       'Books',\n",
+        "                                       'Personal',\n",
+        "                                       'PhD',\n",
+        "                                       'Terminal',\n",
+        "                                       'S_F_Ratio',\n",
+        "                                       'perc_alumni',\n",
+        "                                       'Expend',\n",
+        "                                       'Grad_Rate'],outputCol='features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c8F_h_1vfaZR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "output = assembler.transform(data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "olJTRmb4fmzk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import StringIndexer"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fgg3rnNZgo8l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "indexer = StringIndexer(inputCol='Private',outputCol='PrivateIndex')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tVyj72_jg0Xn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "output_fixed = indexer.fit(output).transform(output)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jMv2y43tg_vH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 442
+        },
+        "outputId": "03bfc345-372d-4eed-aa5a-63da4cf22ae0"
+      },
+      "source": [
+        "output_fixed.printSchema()"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "root\n",
+            " |-- School: string (nullable = true)\n",
+            " |-- Private: string (nullable = true)\n",
+            " |-- Apps: integer (nullable = true)\n",
+            " |-- Accept: integer (nullable = true)\n",
+            " |-- Enroll: integer (nullable = true)\n",
+            " |-- Top10perc: integer (nullable = true)\n",
+            " |-- Top25perc: integer (nullable = true)\n",
+            " |-- F_Undergrad: integer (nullable = true)\n",
+            " |-- P_Undergrad: integer (nullable = true)\n",
+            " |-- Outstate: integer (nullable = true)\n",
+            " |-- Room_Board: integer (nullable = true)\n",
+            " |-- Books: integer (nullable = true)\n",
+            " |-- Personal: integer (nullable = true)\n",
+            " |-- PhD: integer (nullable = true)\n",
+            " |-- Terminal: integer (nullable = true)\n",
+            " |-- S_F_Ratio: double (nullable = true)\n",
+            " |-- perc_alumni: integer (nullable = true)\n",
+            " |-- Expend: integer (nullable = true)\n",
+            " |-- Grad_Rate: integer (nullable = true)\n",
+            " |-- features: vector (nullable = true)\n",
+            " |-- PrivateIndex: double (nullable = false)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UWjhF3UShEGs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_data = output_fixed.select('features','PrivateIndex')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IXa1ssCOhNsI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_data,test_data = final_data.randomSplit([0.7,0.3])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lxSRYhI1hTcs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.classification import (DecisionTreeClassifier,\n",
+        "                                       GBTClassifier,\n",
+        "                                       RandomForestClassifier)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7SNzI_lchelR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml import Pipeline"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nRfWW__-huzf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dtc = DecisionTreeClassifier(labelCol='PrivateIndex')\n",
+        "rfc = RandomForestClassifier(labelCol='PrivateIndex',numTrees=150)\n",
+        "gbt = GBTClassifier(labelCol='PrivateIndex')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cDah2orUh86P",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dtc_model = dtc.fit(train_data)\n",
+        "rfc_model = rfc.fit(train_data)\n",
+        "gbt_model = gbt.fit(train_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KO7N9jiViF5e",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dtc_preds = dtc_model.transform(test_data)\n",
+        "rfc_preds = rfc_model.transform(test_data)\n",
+        "gbt_preds = gbt_model.transform(test_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZbZtJVlSiQ_4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.evaluation import BinaryClassificationEvaluator"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YsFfSOtCiZYw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_bin_eval = BinaryClassificationEvaluator(labelCol='PrivateIndex')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "97F7dMDvifXP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "9eb107aa-de1a-4822-d873-8a1fb1757d00"
+      },
+      "source": [
+        "print('DTC')\n",
+        "print(my_bin_eval.evaluate(dtc_preds))"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "DTC\n",
+            "0.950420673076923\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Se9CdcQ2ilk_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "4cc1b8ee-5eb8-4527-aa5a-8cbbc53435a2"
+      },
+      "source": [
+        "print('RFC')\n",
+        "print(my_bin_eval.evaluate(rfc_preds))"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "RFC\n",
+            "0.9808550824175825\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V-qhp9jOivK7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "my_bin_eval2 = BinaryClassificationEvaluator(labelCol='PrivateIndex',rawPredictionCol='prediction')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gZroUY3YjSPS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "3ac64059-0258-492c-f4a0-99fdcae614b9"
+      },
+      "source": [
+        "print('GBT')\n",
+        "print(my_bin_eval2.evaluate(gbt_preds))"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "GBT\n",
+            "0.9132039835164836\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3uNSDFC9jXzb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.evaluation import MulticlassClassificationEvaluator"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6racjCDCkKai",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "acc_eval = MulticlassClassificationEvaluator(labelCol='PrivateIndex',metricName='accuracy')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_wuqMhB1kP-L",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rfc_acc = acc_eval.evaluate(rfc_preds)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mxhIKGW1kZvI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "319fa448-fe5e-4113-aa3d-5ea80fbc873c"
+      },
+      "source": [
+        "rfc_acc"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9349593495934959"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bi8cVFEfkbRb",
         "colab_type": "code",
         "colab": {}
       },
