--- a/05_sparkTreeMethods.ipynb
+++ b/05_sparkTreeMethods.ipynb
@@ -907,6 +907,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XoRhov783gpH",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Consulting Project"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Bi8cVFEfkbRb",
@@ -914,7 +924,294 @@
         "colab": {}
       },
       "source": [
-        ""
+        "spark = SparkSession.builder.appName('tree_consult').getOrCreate()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DxGK0ElP6ix4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "data = spark.read.csv('dog_food.csv',inferSchema=True,header=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4WmeF8Mg64BQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f3137b15-64ff-4aab-dcac-0cdc0478905f"
+      },
+      "source": [
+        "data.head(1)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(A=4, B=2, C=12.0, D=3, Spoiled=1.0)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aZZkbeZ47ArS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import VectorAssembler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xJ0fk4XP7OHu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4adcc28b-a217-4435-cb00-0c6bea29ca0c"
+      },
+      "source": [
+        "data.columns"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['A', 'B', 'C', 'D', 'Spoiled']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N81kBBAB7PkG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "assembler = VectorAssembler(inputCols=['A','B','C','D'],outputCol='features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IKKATBBL7YP8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "output = assembler.transform(data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zyg6aur57bRM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.classification import RandomForestClassifier"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gThqP85L7fso",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rfc = RandomForestClassifier(labelCol='Spoiled',featuresCol='features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0uAttEnI7kwL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_data = output.select('features','Spoiled')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ffcRsakb7pTs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 498
+        },
+        "outputId": "4a45b715-4a7f-4ba6-ae11-2702d17b87ca"
+      },
+      "source": [
+        "final_data.show()"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+-------------------+-------+\n",
+            "|           features|Spoiled|\n",
+            "+-------------------+-------+\n",
+            "| [4.0,2.0,12.0,3.0]|    1.0|\n",
+            "| [5.0,6.0,12.0,7.0]|    1.0|\n",
+            "| [6.0,2.0,13.0,6.0]|    1.0|\n",
+            "| [4.0,2.0,12.0,1.0]|    1.0|\n",
+            "| [4.0,2.0,12.0,3.0]|    1.0|\n",
+            "|[10.0,3.0,13.0,9.0]|    1.0|\n",
+            "| [8.0,5.0,14.0,5.0]|    1.0|\n",
+            "| [5.0,8.0,12.0,8.0]|    1.0|\n",
+            "| [6.0,5.0,12.0,9.0]|    1.0|\n",
+            "| [3.0,3.0,12.0,1.0]|    1.0|\n",
+            "| [9.0,8.0,11.0,3.0]|    1.0|\n",
+            "|[1.0,10.0,12.0,3.0]|    1.0|\n",
+            "|[1.0,5.0,13.0,10.0]|    1.0|\n",
+            "|[2.0,10.0,12.0,6.0]|    1.0|\n",
+            "|[1.0,10.0,11.0,4.0]|    1.0|\n",
+            "| [5.0,3.0,12.0,2.0]|    1.0|\n",
+            "| [4.0,9.0,11.0,8.0]|    1.0|\n",
+            "| [5.0,1.0,11.0,1.0]|    1.0|\n",
+            "|[4.0,9.0,12.0,10.0]|    1.0|\n",
+            "| [5.0,8.0,10.0,9.0]|    1.0|\n",
+            "+-------------------+-------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jh-4hcNJ7rCW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rfc_model = rfc.fit(final_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0ZAafV8G7vyp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6bb64d83-f707-412d-83d8-645655fc6c8e"
+      },
+      "source": [
+        "final_data.head(1)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(features=DenseVector([4.0, 2.0, 12.0, 3.0]), Spoiled=1.0)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b238GSej70Yq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ff57839d-d533-48cc-d9b2-5a73551f478b"
+      },
+      "source": [
+        "rfc_model.featureImportances"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SparseVector(4, {0: 0.0196, 1: 0.0231, 2: 0.9365, 3: 0.0209})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nzfQvxJ574av",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# C is the most important feature"
       ],
       "execution_count": 0,
       "outputs": []
