KMeans code along

--- a/06_sparkKMeans.ipynb
+++ b/06_sparkKMeans.ipynb
@@ -233,7 +233,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 55
+          "height": 35
         },
         "outputId": "8682876a-a139-4cc9-ae96-a88096fc1969"
       },
@@ -308,6 +308,443 @@
       "cell_type": "code",
       "metadata": {
         "id": "KRF3es2Bk497",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "spark = SparkSession.builder.appName('cluster').getOrCreate()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rsrqTXco1XHg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "dataset = spark.read.csv('seeds_dataset.csv',inferSchema=True,header=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VwPpH5iz1qUo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 183
+        },
+        "outputId": "89f02f4b-7db8-40b9-9f66-191eae3e854c"
+      },
+      "source": [
+        "dataset.printSchema()"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "root\n",
+            " |-- area: double (nullable = true)\n",
+            " |-- perimeter: double (nullable = true)\n",
+            " |-- compactness: double (nullable = true)\n",
+            " |-- length_of_kernel: double (nullable = true)\n",
+            " |-- width_of_kernel: double (nullable = true)\n",
+            " |-- asymmetry_coefficient: double (nullable = true)\n",
+            " |-- length_of_groove: double (nullable = true)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2C9bn1An1vKk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5d8b0683-86f6-42b0-beb5-79b7b789f200"
+      },
+      "source": [
+        "dataset.head(1)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(area=15.26, perimeter=14.84, compactness=0.871, length_of_kernel=5.763, width_of_kernel=3.312, asymmetry_coefficient=2.221, length_of_groove=5.22)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ft8eJu-y2Ab6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.clustering import KMeans"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BrWd7Vot2UNL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pyspark.ml.feature import VectorAssembler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YtWbdGUG2chV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 146
+        },
+        "outputId": "92db4768-f8a6-4092-b214-da876995290f"
+      },
+      "source": [
+        "dataset.columns"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['area',\n",
+              " 'perimeter',\n",
+              " 'compactness',\n",
+              " 'length_of_kernel',\n",
+              " 'width_of_kernel',\n",
+              " 'asymmetry_coefficient',\n",
+              " 'length_of_groove']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0GcyVElD2e2E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "assembler = VectorAssembler(inputCols=dataset.columns,outputCol='features')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7K3O_cIc2mLl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_data = assembler.transform(dataset)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "djLz2Bms2rAL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "76f71c2f-a3c6-462d-b53d-46b18865f8f7"
+      },
+      "source": [
+        "final_data.printSchema()"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "root\n",
+            " |-- area: double (nullable = true)\n",
+            " |-- perimeter: double (nullable = true)\n",
+            " |-- compactness: double (nullable = true)\n",
+            " |-- length_of_kernel: double (nullable = true)\n",
+            " |-- width_of_kernel: double (nullable = true)\n",
+            " |-- asymmetry_coefficient: double (nullable = true)\n",
+            " |-- length_of_groove: double (nullable = true)\n",
+            " |-- features: vector (nullable = true)\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JiA4zvqw2t5H",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# feature scaling\n",
+        "from pyspark.ml.feature import StandardScaler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a6kTvdnX24J-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scaler = StandardScaler(inputCol='features',outputCol='scaledFeatures')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ulk8boWF3Alk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "scaler_model = scaler.fit(final_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mY1ubt9p3Evg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_data = scaler_model.transform(final_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9FxJAcE33Jia",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "2c5ace92-0fa6-47b3-92bf-6cac0bcc6b70"
+      },
+      "source": [
+        "final_data.head(1)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(area=15.26, perimeter=14.84, compactness=0.871, length_of_kernel=5.763, width_of_kernel=3.312, asymmetry_coefficient=2.221, length_of_groove=5.22, features=DenseVector([15.26, 14.84, 0.871, 5.763, 3.312, 2.221, 5.22]), scaledFeatures=DenseVector([5.2445, 11.3633, 36.8608, 13.0072, 8.7685, 1.4772, 10.621]))]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "byH3_qyY3Q5B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "kmeans = KMeans(featuresCol='scaledFeatures',k=3)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IM74IRE23nie",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = kmeans.fit(final_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kF9BcYsH3qlz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "wssse = model.computeCost(final_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jl5tyBBF3xfI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "89ff8b45-d134-4050-cf22-9cd747b7a5b8"
+      },
+      "source": [
+        "print(wssse)"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "428.85343407938126\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RlHsvhvC3ztP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 91
+        },
+        "outputId": "0ed73b20-a829-49bd-8905-59b76118f344"
+      },
+      "source": [
+        "centers = model.clusterCenters()\n",
+        "print(centers)"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[array([ 4.91309043, 10.92012526, 37.32658724, 12.37724251,  8.59393872,\n",
+            "        1.8226071 , 10.35389957]), array([ 6.32636687, 12.38115343, 37.39222755, 13.9206997 ,  9.75485787,\n",
+            "        2.41428142, 12.28078861]), array([ 4.0648023 , 10.14242485, 35.82143905, 11.81918014,  7.51855717,\n",
+            "        3.19361875, 10.40520609])]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ply7cAKr35R4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 498
+        },
+        "outputId": "17bb60b4-0efa-4f6e-fc88-e47727de952c"
+      },
+      "source": [
+        "model.transform(final_data).select('prediction').show()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+----------+\n",
+            "|prediction|\n",
+            "+----------+\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         1|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         0|\n",
+            "|         2|\n",
+            "+----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "smzWfafE3_tf",
         "colab_type": "code",
         "colab": {}
       },
